--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-src_dir = src
+src_dir = test
 
 [env:esp32doit-devkit-v1]
 platform = espressif32
