--- a/platformio.ini
+++ b/platformio.ini
@@ -9,8 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-src_dir = test
-
+src_dir = src
 
 [env:esp32doit-devkit-v1]
 platform = espressif32
