--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,12 @@
         "initializer_list": "cpp",
         "cstdint": "cpp",
         "*.tcc": "cpp"
-    }
+    },
+    "idf.port": "/dev/ttyUSB0",
+    "idf.adapterTargetName": "esp32",
+    "idf.openOcdConfigs": [
+        "interface/ftdi/esp32_devkitj_v1.cfg",
+        "target/esp32.cfg"
+    ],
+    "idf.flashType": "JTAG"
 }
