PulseCounter working on test/main

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,15 @@
         "string_view": "cpp",
         "initializer_list": "cpp",
         "cstdint": "cpp",
-        "*.tcc": "cpp"
+        "*.tcc": "cpp",
+        "cmath": "cpp",
+        "optional": "cpp",
+        "istream": "cpp",
+        "ostream": "cpp",
+        "system_error": "cpp",
+        "functional": "cpp",
+        "tuple": "cpp",
+        "type_traits": "cpp",
+        "utility": "cpp"
     }
 }
