--- a/platformio.ini
+++ b/platformio.ini
@@ -7,7 +7,6 @@
 ;
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
-
 [platformio]
 src_dir = test
 
@@ -16,3 +15,9 @@ platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
 monitor_speed = 115200
+
+lib_deps =
+  # RECOMMENDED
+  # Accept new functionality in a backwards compatible manner and patches
+  paulstoffregen/Encoder @ ^1.4.2
+  mike-gofton/ESP32PulseCounter@^0.2.0
