--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 [platformio]
-src_dir = src
+src_dir = test
 
 [env:esp32doit-devkit-v1]
 platform = espressif32
